# BigDataSpark

./: RESULTS.md  docker-compose.yml  pyproject.toml
docker/spark/: Dockerfile
src/: config.py  load_raw_to_postgres.py  spark_reports_to_clickhouse.py  spark_star_to_postgres.py
