[project]
name = "bigdataspark"
version = "0.1.0"
description = ""
authors = [
    {name = "Lidne",email = "play.gt.play@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
